changed the width of the lef navbar

--- a/styles/styles.css
+++ b/styles/styles.css
@@ -27,12 +27,14 @@ img{
     color: rgba(0, 0, 0, 60%);
     display: flex;
     flex-direction: row;
-    justify-content: space-between;
+    
 }
 .heading{
     text-align: left;
+    width:20rem;
 }
 .content{
+    width: 100%;
     display:flex;
     flex-direction: row;
     justify-content: end;
